# open-toolset-protocol

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  manifesto.md  mise.toml  schema.json  toolsets.json
RFC/: 0000-template.md  0001-discipline-categories.md  0002-gps-protocol.md  0003-framework-adapters.md  0003-registry-translators.md  0004-formal-verification.md  README.md
adapter/: Cargo.toml  README.md
adapter/builtin/: empty.toolsets.json  safe-defaults.toolsets.json
adapter/integrations/langchain/: README.md
adapter/integrations/mcp/: README.md
adapter/integrations/openai-tools/: README.md
adapter/integrations/pydantic-ai/: README.md
adapter/src/: main.rs
conformance/: README.md
conformance/vectors/: README.md
conformance/vectors/L1/L1-001-valid-minimal/: notes.md  toolsets.json  verdict.json
conformance/vectors/L1/L1-002-valid-with-capabilities/: notes.md  toolsets.json  verdict.json
examples/: claude-code.toolsets.json  codex.toolsets.json  minimal.toolsets.json
formal/: README.md
schemas/: toolsets.schema.json
spec/: 00-manifesto.md  01-protocol.md  02-toolsets-schema.md  03-adapter.md  04-instrumentation.md  05-conformance.md  06-discovery-and-negotiation.md  07-framework-adapters.md  07-registry-translators.md
tools/registry-translators/: README.md
tools/registry-translators/langchain/: README.md
tools/registry-translators/mcp/: README.md
tools/registry-translators/openai-tools/: README.md
tools/registry-translators/pydantic-ai/: README.md
(+56 files in other folders)
