[package]
name = "oatp"
version = "0.0.1"
edition = "2021"
authors = ["stochastic-sisyphus"]
license = "Apache-2.0"
description = "Reference adapter for the Open Agent Toolset Protocol (OATP)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
